--- a/Ch02.html
+++ b/Ch02.html
@@ -11,9 +11,9 @@
     <h2>這是一個<span class="h2">h1</span>的元素</h2>
 
     <div id="div">
-        <h3>我是一個div的元素,我會padding:50px以及margin:20px喔!</h3>
+        <h3>我是一個<span class="textblue">div</span>的元素,我會<span class="textorange">padding:50px</span>以及<span class="pink">margin:20px</span>喔!</h3>
     </div>
-    <h1 class="dark">我是一個黑色背景的<span class="h1">h1</span>元素</h1>
+    <h1 class="dark">我是一個黑色背景的h1元素</h1>
 
 </body>
 </html>
