--- a/Ch03/Ch03.html
+++ b/Ch03/Ch03.html
@@ -2,9 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../Ch02/ch02.css">
+    <script src="./Ch03.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="divdemo">
+        <h1 id="demo">這是一串白底黑字</h1>
+        <h2 class="demo2">這是一串比較小的黃色字</h2>
+    </div>
 </body>
 </html>
