--- a/Ch03/Ch03.html
+++ b/Ch03/Ch03.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../Ch02/ch02.css">
     <script src="./Ch03.js"></script>
-    <title>Document</title>
+    <title>Ch03</title>
 </head>
 <body>
     <div class="divdemo">
