--- a/Ch03/Ch03.html
+++ b/Ch03/Ch03.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../Ch02/ch02.css">
+    <link rel="stylesheet" href="Ch03.css">
     <script src="./Ch03.js"></script>
     <title>Ch03</title>
 </head>
