--- a/Ch01/Ch01.html
+++ b/Ch01/Ch01.html
@@ -4,32 +4,29 @@
 	<meta charset="utf-8">
 	<title>CH1_HTML</title>
 </head>
+	<style></style>
 	<body>
-		<header>
-			<h1><b>HTML 語法練習</b></h1>
-		</header>
+		<h1>HTML 語法練習</h1>
 
-		<article class="test">
-			<h3>本章中你可以學到:</h3>
-			<ul>
-				<li>HTML語法的使用</li>
-				<li>各種常用的HTML標籤</li>
-			</ul>
-			<h2>表單練習</h2>
-			<section>
-				<div><b>姓名輸入:</b></div>
-				<input type="text">
-			</section>
-			<section>
-				<h4>性別:</h4>
-				男<input type="radio">
-				女<input type="radio">
-			</section>
-			<section>
-				<h4>備註:</h4>
-				<textarea></textarea><br>
-				<button>送出</button>
-			</section>
-		</article>
+		<h3>本章中你可以學到:</h3>
+		<ul>
+			<li>HTML語法的使用</li>
+			<li>各種常用的HTML標籤</li>
+		</ul>
+		<h2>表單練習</h2>
+		<div>
+			<h4 style="margin: 10px">輸入姓名:</h4>
+			<input type="text">
+		</div>
+		<div>
+			<h4 style="margin: 10px">性別:</h4>
+			男<input type="radio" name="gender">
+			女<input type="radio" name="gender">
+		</div>
+		<div>
+			<h4 style="margin: 10px">備註:</h4>
+			<textarea></textarea><br>
+			<button>送出</button>
+		</div>
 	</body>
 </html>
