add some function

--- a/Ch03/Ch03_ex2.html
+++ b/Ch03/Ch03_ex2.html
@@ -29,5 +29,13 @@
     <div class="ex2div">
         <button id="send">送出</button>
     </div>      
+    <div class="ex2div">
+        <h3>以下為您的資料:</h3>
+        <p>姓名:<span id ="dataname"></span></p>        
+        <p>性別:<span id ="datagender"></span></p>
+        <p>年齡:<span id ="dataage"></span></p>
+        <p>電話:<span id ="dataphone"></span></p>       
+    </div>
+    
 </body>
 </html>
