--- a/Ch03/Ch03_ex2.html
+++ b/Ch03/Ch03_ex2.html
@@ -15,8 +15,8 @@
     </div>
     <div class="ex2div">
         <h3>性別</h3>
-        <label>男</label><input type="radio" name="gender" value="male" >
-        <label>女</label><input type="radio" name="gender" value="female">
+        <label>男</label><input type="radio" name="gender" value="男" >
+        <label>女</label><input type="radio" name="gender" value="女">
     </div> 
     <div class="ex2div">
         <h3>年齡</h3>
@@ -29,7 +29,7 @@
     <div class="ex2div">
         <button id="send">送出</button>
     </div>      
-    <div class="ex2div">
+    <div class="ex2resultdiv">
         <h3>以下為您的資料:</h3>
         <p>姓名:<span id ="dataname"></span></p>        
         <p>性別:<span id ="datagender"></span></p>
