--- a/Ch06/Ch06.html
+++ b/Ch06/Ch06.html
@@ -17,24 +17,51 @@
                 <div class="playercol">
                     <img src="./image/youtube-logo.jpg" class="imagecol">
                 </div>
-
                 <div class="infocol">
-                    <header style="padding-left:20px;">
+                    <header>
                         <h2 class="wordcol">[測試] 我想做一個 Youtube</h2>
                     </header>
+                    <div class="viewcol">
+                        <div class="viewcount">
+                            <h5>觀看次數：10,683次</h5>
+                        </div>
+                        <div class="optioncol">
+                            <div class="options">
+                                <button class="btn btn-default">+新增至清單</button>
+                                <button class="btn btn-default">→ 分享</button>
+                                <button class="btn btn-default">··· 更多</button>
+                            </div>
+                        </div>
+                        
+                    </div>
                     <div class= "authContainer text-left">
                         <div class="auth">
                             <img src="./image/youtube-logo-small.png">
                         </div>
                         <div class="authInfo">
                             <h5 class="wordcol">測試人員</h5>
-                            <h5 class="wordcol"><span>→ 訂閱</span></h5>
+                            <h5 class="wordcol"><span>訂閱</span></h5>
                         </div>
                     </div>
-                    <div class="options">
-                        <button class="btn btn-default">+新增至清單</button>
-                        <button class="btn btn-default">→ 分享</button>
-                        <button class="btn btn-default">··· 更多</button>
+                </div>
+
+                <div class="infoseccol hidden-sm hidden-xs">
+                    <p>測試放文字測試放文字測試放文字測試放文字測試放文字測試放文字測試放文字</p>
+                    <p>Testing Text Testing Text Testing Text Testing Text Testing Text</p>
+                    <p>0123456789abcdefghijklmnopqrstuvwxyz</p>
+                </div>
+
+                <div class="Commentcol hidden-sm hidden-xs">
+                    <header class="margin:0px">
+                        <h5>留言·99</h5>
+                    </header>
+                    <div class="selfComment">
+                        <img src="./image/youtube-logo-small.png">
+                        <textarea></textarea>
+                        <div class="btn-toolbar pull-right">
+                            <button type="button" class="btn btn-default btn-sm">取消</button>
+                            <button type="button" class="btn btn-info btn-sm">Comment</button>
+                        </div>
                     </div>
                 </div>
             </Main>
@@ -103,6 +130,7 @@
             </aside>
         </div>
 
-        
+        <!-- Standard button -->
+
     </body>
 </html>
